--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 .top-anime-list img {
   width: 100%;
-  height: auto;
+  height: 322px;
 }
 
 .top-anime-list {
@@ -13,4 +13,10 @@
 
 .top-anime-list:hover {
   transform: scale(1.1);
+}
+
+.top-anime-list .top-anime-header h3 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
