--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,11 @@
   height: 322px;
 }
 
-.top-anime-list {
+.top-anime-list .top-anime-hover {
   transition: 1s;
 }
 
-.top-anime-list:hover {
+.top-anime-list .top-anime-hover:hover {
   transform: scale(1.1);
 }
 
@@ -19,4 +19,34 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.hover-link {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-link::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(239 68 68);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+
+@media (max-width: 768px) {
+  .top-anime-list img {
+    height: 250px;
+  }
 }
