--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --secondary-bg: #070720;
+  --primary-bg: #0b0c2a;
+  
+  --primary-color: #fff;
+  --secondary-color: #e53637;
+}
+
+body {
+  background-color: var(--primary-bg);
+}
+
 .top-anime-list img {
   max-width: 100%;
   height: 322px;
