--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,37 @@
   --secondary-color: #e53637;
 }
 
+/* ----------- Container CSS ------------ */
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1320px;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
 body {
   background-color: var(--primary-bg);
 }
@@ -46,7 +77,7 @@ body {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: rgb(239 68 68);
+  background-color: var(--secondary-color);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -56,6 +87,18 @@ body {
   transform-origin: bottom left;
 }
 
+.anime-title h5 {
+  position: relative;
+}
+
+.anime-title h5::after {
+  position: absolute;
+  left: -13px;
+  height: 32px;
+  width: 4px;
+  background: #e53637;
+  content: "";
+}
 
 @media (max-width: 768px) {
   .top-anime-list img {
